Milkings - Added route to get Milkings Average by date range
