# CM.Portal/src/app/api/models/milking-volume-dto.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+import { DateOnly } from './date-only';
+export interface MilkingVolumeDto {
+  average?: number;
+  date?: DateOnly;
+  max?: number;
+  min?: number;
+  volume?: number;
+}
